overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@ body {
   color: #fff;
   width: 100%;
   height: 100vh;
+  margin-left: 0;
   margin: none;
-  background: #0e385d;
 }
 
 #particles-js {
